src/tests/snapshots/gitu__tests__apply_reverse__apply_hunk_no_newline.snap
---
source: src/tests/apply_reverse.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file.txt                                                            |
 @@ -1 +1 @@                                                                    |
 -bad text                                                                      |
 \ No newline at end of file                                                    |
 +good text                                                                     |
 \ No newline at end of file                                                    |
                                                                                |
 Recent commits                                                                 |
 _______ main add file.txt                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d992382006d87074
